Fix missing z-index on navbar

--- a/Thorsight/ClientApp/src/app/modules/view/view.component.scss
+++ b/Thorsight/ClientApp/src/app/modules/view/view.component.scss
@@ -48,4 +48,5 @@ mat-form-field {
   width: 100%;
   align-content: center;
   background-color: #12DEDA;
+  z-index: 100;
 }
